# lausegeneraattori

./: .RData  .Rhistory  .coveragerc  .gitignore  .~lock.trie_build_aabb.csv#  README.md  README.md~  output_diagnose.R  pyproject.toml  sentence_generation.csv  tasks.py  trie_build.csv
dokumentaatio/: Kaytto-ohje.md  Toteutusraportti.md  Trie_ja_Node-rakenteet.dia  maarittelydokumentti.md  sanat_puussa.dia  suunnitteludokumentti.md  testausdokumentti.md  viikkoraportti-01.md  viikkoraportti-02.md  viikkoraportti-03.md  viikkoraportti-04.md  viikkoraportti-05.md  viikkoraportti-06.md  viikkoraportti-07.md  viikkoraportti-08.md
input_files/: kalevala.txt  test.txt
src/: SentenceGenerator.py  generation_time.R  node.py  output_diagnose.R  output_diagnose.py  sentence_generator.py  sentence_generator_ui.py  time_analysis.R  time_report.py  trie.py  trie_build_time.R
src/tests/: node_test.py  sentence_generator_test.py  trie_test.py  trienode_test.py
text/: aa_aa_bb.txt  donquijote.txt  kalevala01.txt  test.txt
