[tool.poetry]
name = "lausegeneraattori"
version = "0.1.0"
description = "Tiralabra-harjoitustyö 2021"
authors = ["Janne Tuukkanen <jatufin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
