[tool.poetry]
name = "lausegeneraattori"
version = "0.1.0"
description = "Tiralabra-harjoitustyö 2021"
authors = ["Janne Tuukkanen <jatufin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
